--- a/outils/sheet_generator_schema_partie_tout.html
+++ b/outils/sheet_generator_schema_partie_tout.html
@@ -276,7 +276,7 @@
     <svg aria-hidden="true" viewBox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
   </div>
   <div class="txt">
-    <h2>Enquête</h2>
+    <h2>Enquêtes — énoncés</h2>
     <p>Détective des grandeurs<br/>Type 1</p>
   </div>
   <div class="pills" aria-label="Choix des fiches">
