--- a/outils/bouliers/abaque_de_gerbert/abaque_gerbert_multiplication_V2.html
+++ b/outils/bouliers/abaque_de_gerbert/abaque_gerbert_multiplication_V2.html
@@ -169,7 +169,7 @@
       justify-content:center;
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       font-weight:950;
-      font-size: 20px;
+      font-size: 22px;
       letter-spacing: .4px;
       color: rgba(0,0,0,0.86);
       line-height:1;
@@ -209,7 +209,7 @@
 
     /* En mode direct : on compact un peu */
     body.directMul .opRow{ height:22px; }
-    body.directMul .opCell{ height:22px; font-size:19px; }
+    body.directMul .opCell{ height:22px; font-size:21px; }
 
     /* On n’affiche plus la multiplication posée dans la carte (elle est dans le tableau) */
     .exerciseCard .exProblemWrap{ display:none; }
@@ -325,22 +325,22 @@
     .colCalc{
       display:flex;
       flex-direction:column;
-      gap:2px;
-      padding:6px 0 0;
+      gap:4px;
+      padding:8px 0 2px;
       align-items:center;
       justify-content:flex-start;
       border-bottom:none;
       background:rgba(255,255,255,0.55);
     }
     .calcRow{
-      height:18px;
-      line-height:18px;
+      height:26px;
+      line-height:26px;
       width:100%;
       display:flex;
       align-items:center;
       justify-content:center;
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
-      font-size:14px;
+      font-size:20px;
       color:#0f172a;
       user-select:none;
     }
@@ -354,9 +354,9 @@
       display:inline-flex;
       align-items:center;
       justify-content:center;
-      min-width:18px;
-      height:18px;
-      padding:0 6px;
+      min-width:22px;
+      height:26px;
+      padding:0 8px;
       border-radius:999px;
       text-align:center;
     }
@@ -378,9 +378,9 @@
 
     /* ===== Multiplication : lignes posées + lignes en jetons (dans l’abaque) ===== */
     .calcRow.hdr{
-      height:26px;
-      line-height:26px;
-      font-size:20px;
+      height:38px;
+      line-height:38px;
+      font-size:32px;
       font-weight:900;
     }
     .calcRow.line{
@@ -1028,8 +1028,7 @@ body.noArches .boardTop{ padding-top: 6px; }
   <div class="tools">
     <button class="btn" id="btnUndo">Retour</button>
     <button class="btn primary" id="btnClear">Réinitialiser</button>
-    <button class="btn" id="btnBigValue">Affichage : OFF</button>
-    <button class="btn" id="btnColValues">Valeurs : OFF</button>
+        <button class="btn" id="btnColValues">Valeurs : OFF</button>
 
     <button class="btn" id="btnMillions">Millions : OFF</button>
 
@@ -1080,15 +1079,7 @@ body.noArches .boardTop{ padding-top: 6px; }
           <div class="exFeedback" id="exFeedback"></div>
 
           <div class="exSettings" id="exSettings" style="display:none;">
-            <div class="exRowSet">
-              <span class="exLbl">Mode</span>
-              <div class="exPills" role="group" aria-label="Mode">
-                <button class="pill" data-mode="steps">Étapes</button>
-                <button class="pill" data-mode="direct">Direct</button>
-              </div>
-            </div>
-
-            <div class="exRowSet">
+<div class="exRowSet">
               <span class="exLbl">A</span>
               <div class="exPills exDigitsPills" role="group" aria-label="Chiffres du multiplicande">
                 <button class="pill" data-adigits="1">1</button>
@@ -1181,7 +1172,7 @@ body.noArches .boardTop{ padding-top: 6px; }
     showMillions: false,
 // ✅ Exercices (Multiplications)
     exCfg: {
-      mode: "steps",      // "steps" | "direct"
+      mode: "direct",      // "steps" | "direct"
       aDigits: 3,         // 1..6 (ou 9 si Millions ON)
       bDigits: 2,         // 1..3 (recommandé)
       carry: "allow",     // "allow" | "none"
@@ -2052,7 +2043,7 @@ renderTray();
   }
 
   function applyTopUI(){
-    btnBigValue.textContent = "Affichage : " + (state.showBigValue ? "ON" : "OFF");
+    if(btnBigValue) btnBigValue.textContent = "Affichage : " + (state.showBigValue ? "ON" : "OFF");
     btnColValues.textContent = "Valeurs : " + (state.showColValues ? "ON" : "OFF");
     btnMillions.textContent = "Millions : " + (state.showMillions ? "ON" : "OFF");
 document.body.classList.toggle("noMillions", !state.showMillions);
@@ -2763,12 +2754,13 @@ function enterExchange(focusCol){
     clearUndo();
   });
 
-  btnBigValue.addEventListener("click", () => {
-    pushUndo();
-    state.showBigValue = !state.showBigValue;
-    render();
-  });
-
+  if(btnBigValue){
+    btnBigValue.addEventListener("click", () => {
+      pushUndo();
+      state.showBigValue = !state.showBigValue;
+      render();
+    });
+  }
   btnColValues.addEventListener("click", () => {
     pushUndo();
     state.showColValues = !state.showColValues;
