--- a/outils/bouliers/index.html
+++ b/outils/bouliers/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Exploration des bouliers et des abaques</title>
+  <title>Exploration des bouliers et des abacs</title>
   <style>
     :root{
       /* Base (même esprit que le sheet generator) */
