--- a/outils/bouliers/index.html
+++ b/outils/bouliers/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Exploration des bouliers et des abacs</title>
+  <title>Exploration des bouliers et des abaques</title>
   <style>
     :root{
       /* Base (même esprit que le sheet generator) */
@@ -227,8 +227,8 @@
     /* Variantes de thème (hover + couleurs titres) */
     .t-rekenrek{--accent: var(--blue);}
     .t-montessori{--accent: var(--green);}
-    .t-soroban{--accent: var(--amber);}
-    .t-gerbert{--accent: var(--violet);}
+    .t-soroban{--accent: var(--violet);}
+    .t-gerbert{--accent: var(--amber);}
 
     .t-rekenrek:hover{border-color:rgba(47,107,255,.28);}
     .t-rekenrek h2{color:#1d4ed8;}
@@ -238,13 +238,13 @@
     .t-montessori h2{color:#047857;}
     .t-montessori .icon{background:linear-gradient(135deg, rgba(16,185,129,.14), rgba(255,255,255,0)); border-color:rgba(16,185,129,.20);}
 
-    .t-soroban:hover{border-color:rgba(245,158,11,.35);}
-    .t-soroban h2{color:#b45309;}
-    .t-soroban .icon{background:linear-gradient(135deg, rgba(245,158,11,.16), rgba(255,255,255,0)); border-color:rgba(245,158,11,.22);}
+    .t-soroban:hover{border-color:rgba(139,92,246,.34);}
+    .t-soroban h2{color:#6d28d9;}
+    .t-soroban .icon{background:linear-gradient(135deg, rgba(139,92,246,.16), rgba(255,255,255,0)); border-color:rgba(139,92,246,.22);}
 
-    .t-gerbert:hover{border-color:rgba(139,92,246,.34);}
-    .t-gerbert h2{color:#6d28d9;}
-    .t-gerbert .icon{background:linear-gradient(135deg, rgba(139,92,246,.16), rgba(255,255,255,0)); border-color:rgba(139,92,246,.22);}
+    .t-gerbert:hover{border-color:rgba(245,158,11,.35);}
+    .t-gerbert h2{color:#b45309;}
+    .t-gerbert .icon{background:linear-gradient(135deg, rgba(245,158,11,.16), rgba(255,255,255,0)); border-color:rgba(245,158,11,.22);}
 
     footer{padding:22px 16px; text-align:center; color:rgba(107,114,128,.65); font-size:12px;}
 
@@ -281,7 +281,7 @@
     <header>
       <div class="head-left">
         <div class="titles">
-          <h1>Exploration des bouliers et des abacs</h1>
+          <h1>Exploration des bouliers et des abaques</h1>
           <p class="small">Ateliers mathématiques</p>
         </div>
       </div>
