--- a/outils/bouliers/abaque_de_gerbert/index.html
+++ b/outils/bouliers/abaque_de_gerbert/index.html
@@ -270,7 +270,7 @@
         <div class="card-head">
           <h3>Multiplication V1</h3>
         </div>
-        <p>Mode guidé pour construire une multiplication.</p>
+        <p>Méthode guidée en étapes pour poser une multiplication.</p>
       </a>
 
       <a href="abaque_gerbert_multiplication_V2.html" class="card-link">
@@ -278,7 +278,15 @@
         <div class="card-head">
           <h3>Multiplication V2</h3>
         </div>
-        <p>Mode guidé pour construire une multiplication.</p>
+        <p>Méthode directe pour poser une multiplication.</p>
+      </a>
+      
+      <a href="abaque_gerbert_multiplication_V3.html" class="card-link">
+        <div class="icon-box">✖️</div>
+        <div class="card-head">
+          <h3>Multiplication V3 - ma préférée</h3>
+        </div>
+        <p>Méthode directe pour poser une multiplication avec superposition.</p>
       </a>
 
       <a href="abaque_gerbert_division.html" class="card-link">
