--- a/outils/sheet_generator_schema_partie_tout.html
+++ b/outils/sheet_generator_schema_partie_tout.html
@@ -52,6 +52,7 @@
     .s5{left:62%; top:44%; background-image:url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%22240%22%20height=%22240%22%20viewBox=%220%200%20240%20240%22%3E%0A%20%20%3Cg%20opacity=%220.9%22%3E%0A%20%20%20%20%3Cpath%20d=%22M%20214.500%20120.000%20C%20219.794%20124.928,%20227.326%20131.566,%20229.218%20137.298%20C%20231.110%20143.031,%20228.882%20149.545,%20225.853%20154.394%20C%20222.823%20159.242,%20215.943%20162.863,%20211.043%20166.388%20C%20206.142%20169.914,%20201.394%20173.045,%20196.452%20175.546%20C%20191.510%20178.046,%20186.522%20180.172,%20181.391%20181.391%20C%20176.261%20182.611,%20169.969%20181.447,%20165.671%20182.861%20C%20161.373%20184.274,%20158.347%20185.371,%20155.602%20189.873%20C%20152.857%20194.376,%20152.253%20203.317,%20149.202%20209.875%20C%20146.151%20216.432,%20142.165%20225.647,%20137.298%20229.218%20C%20132.431%20232.789,%20125.547%20232.683,%20120.000%20231.300%20C%20114.453%20229.917,%20108.883%20224.492,%20104.016%20220.921%20C%2099.149%20217.351,%2094.703%20213.802,%2090.798%20209.875%20C%2086.893%20205.948,%2083.329%20201.860,%2080.584%20197.358%20C%2077.839%20192.855,%2077.002%20186.512,%2074.329%20182.861%20C%2071.656%20179.210,%2069.678%20176.671,%2064.548%20175.452%20C%2059.418%20174.233,%2050.727%20176.421,%2043.548%20175.546%20C%2036.369%20174.671,%2026.373%20173.727,%2021.473%20170.202%20C%2016.573%20166.677,%2014.546%20160.097,%2014.147%20154.394%20C%2013.748%20148.691,%2017.187%20141.717,%2019.079%20135.984%20C%2020.971%20130.252,%2022.972%20124.928,%2025.500%20120.000%20C%2028.028%20115.072,%2030.814%20110.420,%2034.248%20106.418%20C%2037.682%20102.416,%2043.457%2099.659,%2046.103%2095.989%20C%2048.749%2092.319,%2050.553%2089.654,%2050.127%2084.398%20C%2049.701%2079.142,%2044.934%2071.552,%2043.548%2064.454%20C%2042.162%2057.356,%2039.970%2047.558,%2041.809%2041.809%20C%2043.647%2036.059,%2049.279%2032.098,%2054.580%2029.956%20C%2059.880%2027.815,%2067.575%2028.929,%2073.612%2028.957%20C%2079.648%2028.986,%2085.330%2029.243,%2090.798%2030.125%20C%2096.266%2031.007,%20101.551%2032.219,%20106.418%2034.248%20C%20111.285%2036.277,%20115.692%2040.917,%20120.000%2042.300%20C%20124.308%2043.683,%20127.401%2044.574,%20132.268%2042.545%20C%20137.135%2040.516,%20142.880%2033.637,%20149.202%2030.125%20C%20155.524%2026.613,%20164.166%2021.501,%20170.202%2021.473%20C%20176.238%2021.445,%20181.746%2025.577,%20185.420%2029.956%20C%20189.095%2034.336,%20190.413%2041.999,%20192.252%2047.748%20C%20194.090%2053.498,%20195.601%2058.982,%20196.452%2064.454%20C%20197.303%2069.927,%20197.784%2075.328,%20197.358%2080.584%20C%20196.932%2085.840,%20193.881%2091.465,%20193.897%2095.989%20C%20193.913%20100.514,%20194.021%20103.731,%20197.455%20107.732%20C%20200.889%20111.734,%20209.206%20115.072,%20214.500%20120.000%20Z%22%0A%20%20%20%20%20%20%20%20%20%20fill=%22none%22%20stroke=%22%236aa7ff%22%20stroke-width=%224%22%20stroke-linejoin=%22round%22/%3E%0A%20%20%3C/g%3E%0A%3C/svg%3E"); transform:rotate(8deg) scale(.85); opacity:.22;}
     .s6{left:10%; top:52%; background-image:url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%22240%22%20height=%22240%22%20viewBox=%220%200%20240%20240%22%3E%0A%20%20%3Cg%20opacity=%220.9%22%3E%0A%20%20%20%20%3Cpath%20d=%22M%20214.500%20120.000%20C%20219.794%20124.928,%20227.326%20131.566,%20229.218%20137.298%20C%20231.110%20143.031,%20228.882%20149.545,%20225.853%20154.394%20C%20222.823%20159.242,%20215.943%20162.863,%20211.043%20166.388%20C%20206.142%20169.914,%20201.394%20173.045,%20196.452%20175.546%20C%20191.510%20178.046,%20186.522%20180.172,%20181.391%20181.391%20C%20176.261%20182.611,%20169.969%20181.447,%20165.671%20182.861%20C%20161.373%20184.274,%20158.347%20185.371,%20155.602%20189.873%20C%20152.857%20194.376,%20152.253%20203.317,%20149.202%20209.875%20C%20146.151%20216.432,%20142.165%20225.647,%20137.298%20229.218%20C%20132.431%20232.789,%20125.547%20232.683,%20120.000%20231.300%20C%20114.453%20229.917,%20108.883%20224.492,%20104.016%20220.921%20C%2099.149%20217.351,%2094.703%20213.802,%2090.798%20209.875%20C%2086.893%20205.948,%2083.329%20201.860,%2080.584%20197.358%20C%2077.839%20192.855,%2077.002%20186.512,%2074.329%20182.861%20C%2071.656%20179.210,%2069.678%20176.671,%2064.548%20175.452%20C%2059.418%20174.233,%2050.727%20176.421,%2043.548%20175.546%20C%2036.369%20174.671,%2026.373%20173.727,%2021.473%20170.202%20C%2016.573%20166.677,%2014.546%20160.097,%2014.147%20154.394%20C%2013.748%20148.691,%2017.187%20141.717,%2019.079%20135.984%20C%2020.971%20130.252,%2022.972%20124.928,%2025.500%20120.000%20C%2028.028%20115.072,%2030.814%20110.420,%2034.248%20106.418%20C%2037.682%20102.416,%2043.457%2099.659,%2046.103%2095.989%20C%2048.749%2092.319,%2050.553%2089.654,%2050.127%2084.398%20C%2049.701%2079.142,%2044.934%2071.552,%2043.548%2064.454%20C%2042.162%2057.356,%2039.970%2047.558,%2041.809%2041.809%20C%2043.647%2036.059,%2049.279%2032.098,%2054.580%2029.956%20C%2059.880%2027.815,%2067.575%2028.929,%2073.612%2028.957%20C%2079.648%2028.986,%2085.330%2029.243,%2090.798%2030.125%20C%2096.266%2031.007,%20101.551%2032.219,%20106.418%2034.248%20C%20111.285%2036.277,%20115.692%2040.917,%20120.000%2042.300%20C%20124.308%2043.683,%20127.401%2044.574,%20132.268%2042.545%20C%20137.135%2040.516,%20142.880%2033.637,%20149.202%2030.125%20C%20155.524%2026.613,%20164.166%2021.501,%20170.202%2021.473%20C%20176.238%2021.445,%20181.746%2025.577,%20185.420%2029.956%20C%20189.095%2034.336,%20190.413%2041.999,%20192.252%2047.748%20C%20194.090%2053.498,%20195.601%2058.982,%20196.452%2064.454%20C%20197.303%2069.927,%20197.784%2075.328,%20197.358%2080.584%20C%20196.932%2085.840,%20193.881%2091.465,%20193.897%2095.989%20C%20193.913%20100.514,%20194.021%20103.731,%20197.455%20107.732%20C%20200.889%20111.734,%20209.206%20115.072,%20214.500%20120.000%20Z%22%0A%20%20%20%20%20%20%20%20%20%20fill=%22none%22%20stroke=%22%239d4edd%22%20stroke-width=%224%22%20stroke-linejoin=%22round%22/%3E%0A%20%20%3C/g%3E%0A%3C/svg%3E"); transform:rotate(-10deg) scale(.80); opacity:.18;}
 
+
     /* Quelques petites billes (sans numéros), toutes petites, éparpillées */
     .bille{
       position:absolute;
@@ -75,7 +76,7 @@
     .b9{left:30%; top:62%; opacity:.5;}
     .b10{right:34%; bottom:26%; opacity:.45;}
 
-    .wrap{max-width:900px; margin:0 auto; padding:24px 16px 48px;}
+.wrap{max-width:900px; margin:0 auto; padding:24px 16px 48px;}
     header{padding:8px 8px 16px; display:flex; justify-content:space-between; gap:12px; align-items:flex-start;}
     h1{margin:0; font-size:clamp(24px,4.2vw,36px); letter-spacing:.2px;}
     .small{margin:6px 0 0; color:var(--muted); font-size:14px;}
@@ -103,7 +104,7 @@
     .grid{display:grid; grid-template-columns:repeat(12,1fr); gap:12px; padding:0 8px;}
     .card{
       grid-column:span 6;
-      display:flex; align-items:center; gap:14px;
+      display:flex; align-items:center; gap:12px;
       padding:16px 16px;
       border-radius:var(--radius);
       background:var(--card);
@@ -138,7 +139,7 @@
 .icon.icon-splat-black path{fill:#000000;}
 
     .txt{min-width:0;}
-    .card h2{margin:0; font-size:16px; letter-spacing:.2px; line-height:1.15;}
+    .card h2{margin:0; font-size:15px; letter-spacing:.2px; line-height:1.15; white-space:nowrap;}
     .card p{margin:6px 0 0; color:var(--muted); font-size:13px; line-height:1.25;}
 
     @media (max-width: 820px){
@@ -151,7 +152,7 @@
       .b4{right:110px; top:200px;}
       .b6{left:140px; bottom:230px;}
       .b7{right:120px; bottom:250px;}
-    }
+}
   
 /* Crédit SPLAT */
 .small .credit{
@@ -173,20 +174,20 @@
 .pills{
   margin-left:auto;
   display:flex;
-  gap:8px;
+  gap: 6px;
   align-items:center;
 }
 .pill{
   text-decoration:none;
   font-weight:800;
-  font-size:12px;
-  padding:8px 10px;
+  font-size:11px;
+  padding:6px 8px;
   border-radius:999px;
   border:1px solid rgba(17,24,39,.14);
   background:rgba(255,255,255,.70);
   color:var(--ink);
   box-shadow: 0 8px 18px rgba(17,24,39,.08);
-  min-width:56px;       /* taille uniforme */
+  width:62px; min-width:62px; /* taille uniforme */
   text-align:center;
   line-height:1;
 }
@@ -201,6 +202,15 @@
 <div class="splat s4"></div>
 <div class="splat s5"></div>
 <div class="splat s6"></div>
+
+
+
+
+
+
+
+
+
 <div class="bille b1"></div>
 <div class="bille o b2"></div>
 <div class="bille p b3"></div>
@@ -265,24 +275,43 @@
 <p>Générateur</p>
 </div>
 </a>
-<div class="card card-picker" data-default="./gabarits_enquetes_1.pdf" role="link" tabindex="0"><div aria-hidden="true" class="icon">
+<div class="card card-picker" data-default="./gabarits_enquete_additive.pdf" role="link" tabindex="0"><div aria-hidden="true" class="icon">
 <svg aria-hidden="true" viewbox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
 </div><div class="txt">
-<h2>Enquêtes — gabarits</h2>
-<p>À imprimer (A3 ou A4) puis plastifier</p>
-</div><div aria-label="Téléchargements" class="pills"><a class="pill" href="./gabarits_enquetes_1.pdf" rel="noopener" target="_blank">PDF</a><a class="pill" download="" href="./gabarits_enquetes_1.tex" rel="noopener">TEX</a></div></div>
-<div class="card card-picker" data-default="./detective_des_grandeurs__1.pdf" role="link" tabindex="0">
+<h2>Enquêtes additives</h2>
+<p>Gabarits à imprimer en A3 ou A4, puis plastifier</p>
+</div><div aria-label="Téléchargements" class="pills"><a class="pill" href="./gabarits_enquete_additive.pdf" rel="noopener" target="_blank">PDF</a><a class="pill" download="" href="./gabarits_enquete_additive.tex" rel="noopener">TEX</a></div></div>
+<div class="card card-picker" data-default="./detective_des_grandeurs_additive__1.pdf" role="link" tabindex="0">
   <div aria-hidden="true" class="icon">
     <svg aria-hidden="true" viewBox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
   </div>
   <div class="txt">
-    <h2>Enquêtes — énoncés</h2>
-    <p>Détective des grandeurs<br/>Type 1</p>
+    <h2>Enquêtes additives</h2>
+    <p>Énoncés<br/>Détective des grandeurs</p>
   </div>
   <div class="pills" aria-label="Choix des fiches">
-    <a class="pill" href="./detective_des_grandeurs__1.pdf" rel="noopener" target="_blank">Fiche 1</a>
-    <a class="pill" href="./detective_des_grandeurs__2.pdf" rel="noopener" target="_blank">Fiche 2</a>
+    <a class="pill" href="./detective_des_grandeurs_additive__1.pdf" rel="noopener" target="_blank">Fiche 1</a>
+    <a class="pill" href="./detective_des_grandeurs_additive__2.pdf" rel="noopener" target="_blank">Fiche 2</a>
   </div>
+</div>
+
+<div class="card card-picker" data-default="./gabarits_enquetes_multiplicative.pdf" role="link" tabindex="0"><div aria-hidden="true" class="icon">
+<svg aria-hidden="true" viewbox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
+</div><div class="txt">
+<h2>Enquêtes multiplicatives</h2>
+<p>Gabarits à imprimer en A3 ou A4, puis plastifier</p>
+</div><div aria-label="Téléchargements" class="pills"><a class="pill" href="./gabarits_enquetes_multiplicative.pdf" rel="noopener" target="_blank">PDF</a><a class="pill" download="" href="./gabarits_enquete_multiplicative.tex" rel="noopener">TEX</a></div></div>
+<div class="card card-picker" data-default="./detective_des_grandeurs_multiplicative__1.pdf" role="link" tabindex="0">
+  <div aria-hidden="true" class="icon">
+    <svg aria-hidden="true" viewBox="0 0 24 24"><path d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Zm7 1v3h3M8 11h8v2H8v-2Zm0 4h8v2H8v-2Z"></path></svg>
+  </div>
+  <div class="txt">
+    <h2>Enquêtes multiplicatives</h2>
+    <p>Énoncés<br/>Détective des grandeurs</p>
+  </div>
+  <div class="pills" aria-label="Choix des fiches">
+    <a class="pill" href="./detective_des_grandeurs_multiplicative__1.pdf" rel="noopener" target="_blank">Fiche 1</a>
+</div>
 </div>
 </main>
 </div>
