--- a/outils/plateaux_manipulation/nombres_relatifs_somme_difference.html
+++ b/outils/plateaux_manipulation/nombres_relatifs_somme_difference.html
@@ -19,17 +19,17 @@
 
         /* --- STYLES DES JETONS --- */
         .token {
-            width: 70px !important;
-            height: 70px !important;
-            min-width: 70px;
-            min-height: 70px;
+            width: 80px !important;
+            height: 80px !important;
+            min-width: 80px;
+            min-height: 80px;
             border-radius: 50%;
             position: absolute;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: bold;
-            font-size: 1.6rem;
+            font-size: 1.85rem;
             color: white;
             box-shadow: 0 4px 6px rgba(0,0,0,0.25);
             cursor: grab;
@@ -75,13 +75,13 @@
         
         /* CIBLE (MISSION) */
         .target-token {
-            width: 32px;
-            height: 32px;
+            width: 36px;
+            height: 36px;
             border-radius: 50%;
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             font-weight: bold;
             color: white;
             margin: 1px;
@@ -93,7 +93,7 @@
 
         .zero-badge {
             position: absolute;
-            font-size: 2.5rem;
+            font-size: 2.9rem;
             font-weight: 800;
             color: #374151;
             pointer-events: none;
@@ -120,7 +120,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 130px;
+            height: 150px;
             z-index: 5;
             background: linear-gradient(to bottom, rgba(200,220,255,0.0), transparent);
             pointer-events: none;
@@ -138,11 +138,11 @@
         /* NUAGE (Mode Inconnu) */
         #unknown-cloud {
             position: absolute;
-            top: 35%;
-            left: 20%;
+            top: 340px;
+            left: 25%;
             transform: translate(-50%, -50%);
-            width: 280px;
-            height: 180px;
+            width: 330px;
+            height: 215px;
             z-index: 1; /* Derrière les jetons */
             pointer-events: none;
             opacity: 0;
@@ -151,29 +151,37 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            filter: drop-shadow(0 4px 6px rgba(0,0,0,0.1));
+            filter: drop-shadow(0 10px 18px rgba(15,23,42,0.18));
         }
         #unknown-cloud.visible {
-            opacity: 0.6;
+            opacity: 1;
         }
-        /* Forme du nuage en CSS pur */
-        .cloud-shape {
-            width: 100%;
-            height: 100%;
-            background: #e0f2fe;
-            border-radius: 100px;
-            position: relative;
-        }
-        .cloud-shape::after, .cloud-shape::before {
-            content: '';
-            position: absolute;
-            background: #e0f2fe;
-            z-index: -1;
-        }
-        .cloud-shape::after { width: 100px; height: 100px; top: -50px; left: 50px; border-radius: 50%; }
-        .cloud-shape::before { width: 120px; height: 120px; top: -70px; right: 50px; border-radius: 50%; }
+        /* Forme du nuage (SVG) : gris uniforme (aucune démarcation interne) */
+.cloud-shape {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.cloud-svg {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.cloud-content {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 16px;
+}
 
-        /* Scrollbar masquée */
+/* Scrollbar masquée */
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
 
@@ -236,13 +244,33 @@
             box-shadow: none !important;
         }
         .palette-zero-text{
-            font-size: 2.2rem;
+            font-size: 2.6rem;
             font-weight: 800;
             color: #374151;
             text-shadow: 0 0 10px rgba(255,255,255,1);
             line-height: 1;
             pointer-events: none;
         }
+
+/* --- SCALE PROJECTION (un peu plus grand) --- */
+#palette-green, #palette-red, #palette-zero, #btn-auto-simplify{
+    width: 72px !important;
+    height: 72px !important;
+}
+#btn-plus, #btn-minus, #btn-cloud{
+    width: 56px !important;
+    height: 56px !important;
+}
+aside{
+    width: 96px !important;
+}
+header{
+    padding: 0.65rem !important;
+}
+#action-label{
+    font-size: 11px !important;
+}
+
 </style>
 </head>
 <body class="h-screen w-screen flex flex-col">
@@ -350,11 +378,16 @@
 
         <!-- NUAGE MYSTÈRE -->
         <div id="unknown-cloud">
-            <div class="cloud-shape flex items-center justify-center flex-col pt-4">
-                <span class="text-4xl font-extrabold text-slate-400">?</span>
-                <span class="text-sm font-bold text-slate-400 uppercase tracking-wider mt-1">Jetons Cachés</span>
-            </div>
+    <div class="cloud-shape">
+        <svg class="cloud-svg" viewBox="0 0 64 40" preserveAspectRatio="none" aria-hidden="true">
+            <path fill="#475569" d="M18 34H48C55 34 61 29 61 22C61 16 56.5 11 50.5 11C48 4.8 42.2 1 35 1C27.5 1 21 5.7 19.2 12.8C12 13.5 7 19 7 26C7 31 10.5 34 18 34Z"/>
+        </svg>
+        <div class="cloud-content">
+            <span class="text-4xl font-extrabold text-white" style="text-shadow: 0 2px 4px rgba(0,0,0,0.45);">?</span>
+            <span class="text-sm font-bold text-white uppercase tracking-wider mt-1" style="text-shadow: 0 2px 4px rgba(0,0,0,0.45);">Jetons Cachés</span>
         </div>
+    </div>
+</div>
 
         <!-- Zone Ciel -->
         <div id="sky-zone">
@@ -414,8 +447,8 @@
     </div>
 
     <script>
-        const SNAP_THRESHOLD = 80;
-        const TOKEN_SIZE = 70;
+        const SNAP_THRESHOLD = 92;
+        const TOKEN_SIZE = 80;
         
         const state = {
             phase: 1, 
@@ -1149,7 +1182,7 @@
             let badge = document.getElementById(badgeId1) || document.getElementById(badgeId2);
             if (badge) {
                 badge.style.left = (t1.x - 12) + 'px'; 
-                badge.style.top = (t1.y - 30) + 'px';
+                badge.style.top = (t1.y - 34) + 'px';
             }
         }
 
@@ -1239,7 +1272,7 @@
             badge.innerText = '0';
             badge.id = `badge-${t1.id}-${t2.id}`;
             badge.style.left = (midX - 12) + 'px'; 
-            badge.style.top = (midY - 30) + 'px';
+            badge.style.top = (midY - 34) + 'px';
             board.appendChild(badge);
         }
 
@@ -1529,10 +1562,13 @@
 
             const DRAG_THRESHOLD = 8; // px
 
-            function isAddMode() {
+            function isAddModeFor(type) {
                 // Autoriser le drag dès le lancement (operationType peut être null).
                 // On le désactive uniquement quand les boutons servent à définir une cible.
-                return state.operationType !== 'subtract' && state.operationType !== 'cloud';
+                // En mode "nuage", seul le zéro reste déposable : +1/-1 gardent leur rôle "cible".
+                if (state.operationType === 'subtract') return false;
+                if (state.operationType === 'cloud') return type === 'zero';
+                return true;
             }
 
             function isPointInBoard(clientX, clientY) {
@@ -1571,8 +1607,8 @@
                     const badge = document.createElement('div');
                     badge.className = 'zero-badge';
                     badge.innerText = '0';
-                    badge.style.left = (TOKEN_SIZE / 2 - 12) + 'px';
-                    badge.style.top = (TOKEN_SIZE / 2 - 30) + 'px';
+                    badge.style.left = (TOKEN_SIZE / 2 - 14) + 'px';
+                    badge.style.top = (TOKEN_SIZE / 2 - 34) + 'px';
                     g.appendChild(badge);
                 } else {
                     const t = document.createElement('div');
@@ -1660,7 +1696,7 @@
                 if (!drag.active || e.pointerId !== drag.pointerId) return;
 
                 // Pas de glisser-déposer en mode soustraction / nuage (on garde l'usage "cible")
-                if (!isAddMode()) return;
+                if (!isAddModeFor(drag.type)) return;
 
                 const dx = e.clientX - drag.startX;
                 const dy = e.clientY - drag.startY;
@@ -1696,7 +1732,7 @@
                 if (ghost) ghost.remove();
 
                 // CLIC (ou pas en mode add) : comportement actuel => ajout aléatoire
-                if (!moved || !isAddMode()) {
+                if (!moved || !isAddModeFor(type)) {
                     if (type === 'zero') addZeroPair();
                     else handleSideButton(type);
                     return;
